# shardimg

./: Cargo.toml  README.md  bootmanifest.json  manifest.json  meson.build  pyproject.toml
shardimg/: main.py  meson.build  shardimg.in
shardimg/classes/: bootmanifest.py  manifest.py  meson.build
shardimg/functions/: boot.py  desktop.py  init.py  meson.build  system.py
shardimg/utils/: command.py  disks.py  files.py  log.py  meson.build  podman.py  shards.py
