[tool.poetry]
name = "shardimg"
version = "0.1.0"
description = "Build Project Shards OCI images"
authors = ["axtloss <axtlos@getcryst.al>"]
license = "gpl3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
